Fix punctuation in about.html

--- a/about.html
+++ b/about.html
@@ -355,7 +355,7 @@
                 My foray into modding began with the idea of trying to update the existing mod named "Tornado Script" developed by CamxxCore to make it compatible with the latest editions of GTA V. This further developed into "TornadoV" - my first ever mod, which helped me understand the basics of scripting and physics manipulating in GTA 5.
             </p>
             <p>
-                At the moment, I'm working on BlueV Explorer, a fix for the biggest problem of OpenIV—that is, it does not support GTA V Enhanced.
+                At the moment, I'm working on BlueV Explorer, a fix for the biggest problem of OpenIV — it does not support GTA V Enhanced.
             </p>
 
             <div class="timeline">
