--- a/bluev-explorer.html
+++ b/bluev-explorer.html
@@ -470,12 +470,12 @@
                 <div class="status-item">
                     <div class="status-icon">🔧</div>
                     <div class="status-text">Core .rpf reading engine</div>
-                    <span class="status-badge completed">Completed</span>
+                    <span class="status-badge in-progress">Testing</span>
                 </div>
                 <div class="status-item">
                     <div class="status-icon">💾</div>
                     <div class="status-text">Enhanced Edition support</div>
-                    <span class="status-badge completed">Completed</span>
+                    <span class="status-badge in-progress">In Progress</span>
                 </div>
                 <div class="status-item">
                     <div class="status-icon">🎨</div>
