--- a/tornadov.html
+++ b/tornadov.html
@@ -455,7 +455,7 @@
             <h2>Download</h2>
             <div class="download-buttons">
                 <a href="https://gofile.io/d/nif9Qb" target="_blank" class="download-btn">
-                    📥 Download on GTA5-Mods.com
+                    📥 Download this mod
                 </a>
                 <a href="https://github.com/BlueIsAtlantic/TornadoV" target="_blank" class="download-btn secondary">
                     📦 View on GitHub
