--- a/tornadov.html
+++ b/tornadov.html
@@ -487,8 +487,8 @@
                 <a href="#" class="download-btn" style="background: linear-gradient(135deg, #00ff88, #00d4ff);">
                     ⚡ Download TornadoV++ Alpha
                 </a>
-                <a href="#" class="download-btn secondary">
-                    📂 GitHub Repository
+                <a href="https://github.com/BlueIsAtlantic/TornadoV.cpp" class="download-btn secondary">
+                    📦 View on GitHub
                 </a>
             </div>
             <div style="margin-top: 20px; padding: 15px; background: rgba(255, 165, 0, 0.1); border: 1px solid rgba(255, 165, 0, 0.3); border-radius: 12px;">
