--- a/tornadov.html
+++ b/tornadov.html
@@ -485,7 +485,7 @@
             </p>
             <div class="download-buttons">
                 <a href="#" class="download-btn" style="background: linear-gradient(135deg, #00ff88, #00d4ff);">
-                    ⚡ Download TornadoV++ Alpha
+                    Download TornadoV++
                 </a>
                 <a href="https://github.com/BlueIsAtlantic/TornadoV.cpp" class="download-btn secondary">
                     📦 View on GitHub
