--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>blueisatlantic - GTA 5 Mods</title>
+    <title>blueisatlantic</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -511,31 +511,6 @@
         <a href="projects.html" class="cta-button">Explore Projects</a>
     </section>
 
-    <section class="mods-section" id="mods">
-        <h2 class="section-title fade-in">My Mods</h2>
-        <div class="mods-grid">
-            <a href="tornadov.html" style="text-decoration: none; color: inherit;">
-                <div class="mod-card fade-in">
-                    <div class="mod-card-content">
-                        <div class="mod-icon">🌪️</div>
-                        <h3>TornadoV</h3>
-                        <p>Experience realistic tornado simulation in San Andreas with destructive physics and customizable tornado behavior.</p>
-                        <div class="mod-stats">
-                            <div class="stat">
-                                <span class="stat-dot"></span>
-                                <span>Available Now</span>
-                            </div>
-                            <div class="stat">
-                                <span style="color: var(--primary);">View Details →</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </a>
-
-        </div>
-    </section>
-
     <section class="features" id="features">
         <h2 class="section-title fade-in">About My Work</h2>
         <div class="features-grid">
@@ -558,7 +533,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2026 BlueIsAtlantic. Creating mods for the GTA community.</p>
+        <p>&copy; 2026 BlueIsAtlantic.</p>
         <div class="social-links">
             <a href="#" title="Discord">💬</a>
             <a href="#" title="GitHub">📦</a>
