--- a/projects.html
+++ b/projects.html
@@ -568,7 +568,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2026 BlueIsAtlantic. Creating mods for the GTA community.</p>
+        <p>&copy; 2026 BlueIsAtlantic.</p>
     </footer>
 
     <script>
