--- a/bluev-explorer.html
+++ b/bluev-explorer.html
@@ -531,7 +531,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2026 BlueIsAtlantic. Creating mods for the GTA community.</p>
+        <p>&copy; 2026 BlueIsAtlantic.</p>
     </footer>
 
     <script>
