--- a/tornadov.html
+++ b/tornadov.html
@@ -484,7 +484,7 @@
                 Works on both GTA V Legacy and Enhanced in one file!
             </p>
             <div class="download-buttons">
-                <a href="#" class="download-btn" style="background: linear-gradient(135deg, #00ff88, #00d4ff);">
+                <a href="https://gofile.io/d/UOH9Bj" class="download-btn" style="background: linear-gradient(135deg, #00ff88, #00d4ff);">
                     Download TornadoV++
                 </a>
                 <a href="https://github.com/BlueIsAtlantic/TornadoV.cpp" class="download-btn secondary">
@@ -493,14 +493,14 @@
             </div>
             <div style="margin-top: 20px; padding: 15px; background: rgba(255, 165, 0, 0.1); border: 1px solid rgba(255, 165, 0, 0.3); border-radius: 12px;">
                 <p style="color: #ffa500; font-size: 14px; margin: 0;">
-                    ⚠️ <strong>Alpha Version:</strong> This is an early test release. Expect bugs and rough edges. 
-                    The C# version above remains the stable, recommended download. (TornadoV++ Alpha will release soon!)
+                    ⚠️ <strong>Beta Version:</strong> This is an early test release. Expect bugs.
+                    The C# version above remains the stable, recommended download.
                 </p>
             </div>
             <div class="version-info" style="margin-top: 25px;">
                 <div class="version-item">
                     <label>Version</label>
-                    <span>0.0.1-alpha</span>
+                    <span>0.0.1-beta</span>
                 </div>
                 <div class="version-item">
                     <label>Requirements</label>
@@ -508,7 +508,7 @@
                 </div>
                 <div class="version-item">
                     <label>Status</label>
-                    <span style="color: #ffa500;">Development/Unreleased Phase</span>
+                    <span style="color: #297000;">Released</span>
                 </div>
             </div>
         </div>
@@ -544,7 +544,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2026 BlueIsAtlantic. Creating mods for the GTA community.</p>
+        <p>&copy; 2026 BlueIsAtlantic.</p>
     </footer>
 
     <script>
