--- a/tornadov.html
+++ b/tornadov.html
@@ -452,7 +452,7 @@
         </div>
 
         <div class="download-section">
-            <h2>TornadoV (ScriptHookVDotNet(C#))</h2>
+            <h2>TornadoV</h2>
             <div class="download-buttons">
                 <a href="https://gofile.io/d/nif9Qb" target="_blank" class="download-btn">
                     📥 Download TornadoV
@@ -478,9 +478,9 @@
         </div>
 
         <div class="download-section" style="animation-delay: 0.5s; background: rgba(0, 212, 255, 0.03);">
-            <h2>TornadoV++ (C++ Version - Alpha)</h2>
+            <h2>TornadoV++</h2>
             <p style="color: var(--text-muted); margin-bottom: 20px; font-size: 15px;">
-                Next-generation rewrite in native C++ for better performance and compatibility. 
+                Rewrite in native C++ for better performance and compatibility. 
                 Works on both GTA V Legacy and Enhanced in one file!
             </p>
             <div class="download-buttons">
